--- a/.pages.yml
+++ b/.pages.yml
@@ -1,10 +1,3 @@
-media:
-  - name: media
-    label: Media
-    input: src/media
-    output: /media
-    path: /media
-
 content:
   - name: blog
     label: Blog Posts
@@ -14,20 +7,26 @@ content:
       - name: title
         label: Title
         type: string
-      - name: date
+        required: true
+      - name: pubDate
         label: Publication Date
         type: date
+        required: true
       - name: description
         label: Description
         type: string
+        required: false
       - name: featured_image
         label: Featured Image
         type: image
+        required: false
       - name: tags
         label: Tags
         type: list
+        required: false
         items:
           type: string
       - name: body
         label: Body
         type: rich-text
+        required: true
