--- a/src/config/siteConfig.json
+++ b/src/config/siteConfig.json
@@ -1,6 +1,6 @@
 {
   "name": "My Astro Website",
-  "url": "https://www.example.com",
+  "url": "https://staging.moojing-global.com",
   "title": "My Astro Website",
   "description": "Welcome to my new Astro site!",
   "author": "Your Name",
