--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconify-json/tabler": "^1.2.23",
     "@iconify/icons-tabler": "^1.2.95",
     "@tailwindcss/vite": "^4.1.16",
+    "@tailwindplus/elements": "^1.0.18",
     "astro": "^5.15.1",
     "astro-icon": "^1.1.5",
     "prettier": "^3.6.2",
