--- a/starwind.config.json
+++ b/starwind.config.json
@@ -10,6 +10,10 @@
     {
       "name": "button",
       "version": "2.2.0"
+    },
+    {
+      "name": "pagination",
+      "version": "3.0.1"
     }
   ]
 }
